@@ -5,7 +5,7 @@ DEFS=@DEFS@ -I. -Ibase -Iarray -Itextcode
 
 libqmail_LTLIBRARIES = libqmail.la
 libqmail_la_SOURCES = $(COMMONSOURCES)
-libqmail_la_LIBADD = @LIB_CRYPT@ @LIB_CRYPTO@ @LIB_SSL@
+libqmail_la_LIBADD = @LIB_CRYPT@ @LIB_CRYPTO@
 libqmail_la_LDFLAGS = -version-info @LIBVER@:0:0
 libqmail_la_CFLAGS = -fPIC
 libqmaildir=@libdir@
