@@ -10,6 +10,8 @@ Release 1.1 Start 14/02/2021
 04. added timestamp() function
 05. uint16.h, uint32.h1, uint32.h2: fixed function prototype and warning
     -Warray-parameter
+- 04/05/2021
+06. Removed linking libqmail with openssl library
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
